# PytorchMNIST

./: .gitignore  CommonLibrary.py  FashionMNIST.py  FashionMNISTModel  MNISTModel  NeuralNetwork.py  SavedModel  TrainFashionMNIST.py  TrainMNIST.py  pyproject.toml
