[tool.poetry]
name = "pytorchmnist"
version = "0.1.0"
description = ""
authors = ["Taran <benzidrine@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
matplotlib = "^3.3.3"
#pip install torch==1.7.1+cu101 torchvision==0.8.2+cu101 torchaudio===0.7.2 -f https://download.pytorch.org/whl/torch_stable.html

scikit-learn = "^0.23.2"
pandas = "^1.1.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
